<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/SteelBlue"
    tools:context=".UpdateEmployee">

    <TextView
        android:id="@+id/tvUpdateEmployeeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tvIndividualActivityTitle"
        android:textAlignment="center"
        android:textColor="@color/NeonBlue"
        android:textColorHighlight="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvUpdateNameTitle"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/tvIndEmployeeNameTitle"
        android:textAlignment="viewEnd"
        android:textColor="@color/BabyBlue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUpdateEmployeeTitle"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvUpdateIdTitle"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/tvIndEmployeeIDTitle"
        android:textAlignment="viewEnd"
        android:textColor="@color/BabyBlue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUpdateNameTitle"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvUpdateDeptTitle"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/tvIndEmployeeDeptTitle"
        android:textAlignment="viewEnd"
        android:textColor="@color/BabyBlue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUpdateIdTitle"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvUpdateImageURL"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/tvIndEmployeeImageUrlTitle"
        android:textAlignment="viewEnd"
        android:textColor="@color/BabyBlue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUpdateDeptTitle"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etUpdateTheID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/theIDHint"
        android:importantForAutofill="no"
        android:inputType="number|textPersonName"
        android:textAlignment="center"
        android:textColor="@color/BabyBlue"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvUpdateIdTitle"
        app:layout_constraintTop_toBottomOf="@+id/etUpdateTheName"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/etUpdateTheName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/theNameHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/BabyBlue"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvUpdateNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvUpdateEmployeeTitle"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/etUpdateTheDEPT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/theDeptHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/BabyBlue"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvUpdateDeptTitle"
        app:layout_constraintTop_toBottomOf="@+id/etUpdateTheID"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/etUpdateTheImageUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/theImageURLHint"
        android:importantForAutofill="no"
        android:inputType="textUri|textPersonName"
        android:textAlignment="center"
        android:textColor="@color/BabyBlue"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvUpdateDeptTitle"
        app:layout_constraintTop_toBottomOf="@+id/etUpdateTheDEPT"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btnUpdateEmployee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/btnUpdateEmployee"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/BabyBlue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUpdateTheImageUrl"
        app:strokeColor="@color/NeonBlue"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/btnUpdateReturnToAllEmployees"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/btnReturnToAllEmployeesRv"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/BabyBlue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdateEmployee"
        app:strokeColor="@color/NeonBlue"
        app:strokeWidth="3dp" />
</androidx.constraintlayout.widget.ConstraintLayout>